# jammy_flows

./: .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: build.yml  docs_build.yml  docs_buildv1.yml  test_app.yml  tests.yml
_sources/: index.rst.txt
_sources/usage/: api.rst.txt  installation.rst.txt  introduction.rst.txt  suggested_settings.rst.txt  training.rst.txt
docs/source/: conf.py  index.rst
docs/source/usage/: api.rst  introduction.rst  overview.rst  (+1 more)
examples/: center_mean.py  examples.ipynb  jammy_flows.py  plot_moving_lambert_projection.py
jammy_flows/: __init__.py  amortizable_mlp.py  extra_functions.py  flow_options.py  flows.py  helper_fns.py  helper_fns_coverage.py
jammy_flows/helper_fns/: approximation_coverage_calculation.py  approximation_samplers.py  contours.py  coverage.py  grid_functions.py
jammy_flows/layers/: bisection_n_newton.py  extra_functions.py  layer_base.py  matrix_fns.py  spline_fns.py
jammy_flows/main/: default.py  fully_amortized.py  zlp_kent_ml_fit.py
tests/: check_performance.py  interval.py  plot_window_fns.py  run_tests.py  test_entropy_and_marginal_entropy.py  test_general.py  test_gpu_support.py  test_inner_loop_simplex.py  test_manifold_embedding_consistency.py  test_mlp.py  test_mlps.py  test_newton_iters.py  test_old_new_gaussianization_flow.py  test_skewness.py  test_softplus_m_1_approximation.py  test_spheres.py
usage/: api.html  installation.html  introduction.html  overview.html  suggested_settings.html  training.html
(+25 files in other folders)
